--- a/src/app/mainsite/above-the-fold/above-the-fold.component.html
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.html
@@ -1,4 +1,9 @@
 <section class="hero-section">
+  <img
+  class="hero-bg"
+  src="./assets/img/background_abovethefold.svg"
+  alt=""
+/>
     <img
       class="background-image-photo"
       src="./assets/img/photo_shadows.svg"
