--- a/src/app/mainsite/above-the-fold/above-the-fold.component.scss
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.scss
@@ -19,7 +19,7 @@
 
 .center-image {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -109,6 +109,7 @@
   align-items: center;
   flex-direction: column;
   position: relative;
+  z-index: 2;
 }
 
 .social-bar-line {
@@ -149,9 +150,7 @@
   gap: 42px;
   display: flex;
   height: 50px;
-
-  left: 0;
-  bottom: 0;
+  z-index: 2;
 
   > a {
     > img {
@@ -183,4 +182,13 @@
   width: 32px;
   height: 32px;
   transform: rotate(90deg) scale(1.2);
+}
+
+.hero-bg {
+  position: absolute;
+  top: 430px;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  object-fit:  cover;
 }
