--- a/src/app/mainsite/skills/skills.component.html
+++ b/src/app/mainsite/skills/skills.component.html
@@ -1,62 +1,57 @@
 <section class="skills">
-  <div class="skills-content">
-    <img
-      class="skills-bg"
-      src="./assets/img/background_abovethefold.svg"
-      alt=""
-    />
-    <div class="left-section">
-      <div class="skill-icons">
-        <div class="html-icon">
+  <div class="skills-wrapper">
+    <div class="skills-icons-container">
+      <div class="skills-icons-grid">
+        <div class="skill-item">
           <img src="./assets/img/html.svg" alt="" />
           <p>HTML</p>
         </div>
 
-        <div class="html-icon">
+        <div class="skill-item">
           <img src="./assets/img/css.svg" alt="" />
           <p>CSS</p>
         </div>
 
-        <div class="html-icon">
+        <div class="skill-item">
           <img src="./assets/img/javascript.svg" alt="" />
           <p>JavaScript</p>
         </div>
 
-        <div class="html-icon">
+        <div class="skill-item">
           <img src="./assets/img/typescript.svg" alt="" />
           <p>TypeScript</p>
         </div>
 
-        <div class="html-icon">
+        <div class="skill-item">
           <img src="./assets/img/firebase.svg" alt="" />
           <p>Firebase</p>
         </div>
 
-        <div class="html-icon">
+        <div class="skill-item">
           <img src="./assets/img/angular.svg" alt="" />
           <p>Angular</p>
         </div>
 
-        <div class="html-icon">
+        <div class="skill-item">
           <img src="./assets/img/api.svg" alt="" />
-          <p>Rest-Api</p>
+          <p>Rest-API</p>
         </div>
 
-        <div class="html-icon">
+        <div class="skill-item">
           <img src="./assets/img/git.svg" alt="" />
           <p>GIT</p>
         </div>
 
-        <div class="left-skills">
-          <div class="html-icon">
+        <div class="additional-skills">
+          <div class="skill-item">
             <img src="./assets/img/material-design.svg" alt="" />
             <p>
               Material <br />
-              design
+              Design
             </p>
           </div>
 
-          <div class="html-icon">
+          <div class="skill-item">
             <img src="./assets/img/scrum.svg" alt="" />
             <p>Scrum</p>
           </div>
@@ -64,18 +59,19 @@
           <div
             (mouseenter)="hover = true"
             (mouseleave)="hover = false"
-            class="html-icon"
+            class="skill-item"
           >
             <img class="learning-img" src="./assets/img/learning.png" alt="" />
             <p>
               Further <br />
-              education
+              Education
             </p>
           </div>
         </div>
       </div>
     </div>
-    <div class="skills-description">
+
+    <div class="skills-details">
       <div class="skills-header">
         <h2>Skills</h2>
         <div class="skills-bar"></div>
@@ -84,16 +80,16 @@
         I have gained valuable experience in building projects using various
         front-end technologies and concepts. From crafting responsive user
         interfaces to optimizing performance, I am constantly improving my
-        abilities to stay at the forefront of the industry. My journey doesn't
+        abilities to stay at the forefront of the industry. My journey does not
         stop there — I am always looking for new ways to expand my knowledge and
         take on new challenges. Recently, I have started exploring ethical
         hacking to better understand web security and to enhance the robustness
         of the applications I build. Continuous learning is key to my approach,
         and I am excited about where it will take me next.
       </p>
-      <div class="another-skill">
+      <div class="contact-cta">
         <p>
-            Plese feel free to contact me. I am always eager to continue expanding my knowledge and am passionate about learning new technologies and concepts.
+          Please feel free to contact me. I am always eager to continue expanding my knowledge and am passionate about learning new technologies and concepts.
         </p>
         <button class="get-in-touch">Get in touch</button>
       </div>
