--- a/src/app/mainsite/skills/skills.component.scss
+++ b/src/app/mainsite/skills/skills.component.scss
@@ -1,41 +1,33 @@
-section {
-    background: #141D2F;
+.skills {
+    background: #141d2f;
     width: 100%;
     display: flex;
     justify-content: center;
-
-}
-
-
-
-.skills-content {
+  }
+  
+  .skills-wrapper {
     margin-top: 100px;
     width: 1440px;
     display: flex;
-
     justify-content: space-between;
-
-
-
-}
-
-.left-section {
+  }
+  
+  .skills-icons-container {
     padding: 40px 80px;
     position: relative;
     z-index: 100;
-
-}
-
-.skill-icons {
+  }
+  
+  .skills-icons-grid {
     width: 532px;
     display: flex;
     flex-direction: row;
     gap: 62px;
     flex-wrap: wrap;
     justify-content: center;
-}
-
-.html-icon {
+  }
+  
+  .skill-item {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -44,159 +36,87 @@ section {
     text-align: center;
     height: 139px;
     width: 91px;
-
-    >img {
-        &:hover {
-            position: relative;
-            top: -10px;
-        }
+  
+    > img {
+      &:hover {
+        position: relative;
+        top: -10px;
+      }
     }
-}
-
-.right-section {
-    z-index: 100;
-}
-
-.skills-description {
-    z-index: 100;
+  }
+  
+  .skills-details {
+    z-index: 10;
     width: 562px;
-
-
-}
-
-.skills-description h2 {
+  }
+  
+  .skills-details h2 {
     font-size: 90px;
-    font-weight: 600;
-}
-
-.skills-bar {
+    font-weight: 700;
+  }
+  
+  .skills-bar {
     width: 287px;
-    border: 2px solid #9747FF;
+    border: 2px solid #9747ff;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
-
-}
-
-.skills-header {
+  }
+  
+  .skills-header {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 32px;
-}
-
-.skills-description p {
-    margin-top: 20px;
+  }
+  
+  .skills-details p {
     font-size: 16px;
-    font-weight: 300;
-
-
-}
-
-.skills-description h3 {
-    font-size: 32px;
-    margin-top: 20px;
-}
-
-.skills-description h3 span {
-    color: #9747FF;
-}
-
-.get-in-touch {
-    margin-top: 40px;
-    padding: 10px 20px;
-    background: #70E61C;
-    color: white;
-    border: none;
-    font-weight: 300;
-    border-radius: 10px;
-    font-size: 20px;
-    cursor: pointer;
-
-    height: 70px;
     font-weight: 400;
-
-    &:hover {
-        background-color: #9747FF;
-
-
-
-    }
-}
-
-.learning-bubble {
-    opacity: 0;
-    position: absolute;
-    bottom: 150px;
-    right: 202px;
-    opacity: 0;
-
-}
-
-.bubble-triangle {
-    position: relative;
-
-
-}
-
-.triangle {
-    position: absolute;
-    left: 27px;
-
-}
-
-.speech-bubble {
-    position: absolute;
-    bottom: 180px;
-    left: 304px;
-    height: 135px;
-    opacity: 0;
-
-}
-
-
-
-.bubble {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 20px;
-    background-color: white;
-    padding: 10px;
-    width: 200px;
+    text-align: center;
+  }
 
-    position: relative;
-
-    >p {
-        display: flex;
-        justify-content: center;
-        color: black;
-    }
-
-
-
-}
-.skills-bg {
-    position: absolute;
-    top: 1800px;
- 
-}
-
-
-.visible {
-    opacity: 1;
-}
-
-.left-skills {
-
-    gap: 62px;
+  .contact-cta {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  
+  .get-in-touch {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background: #70e61c;
+    color: white;
+    border: none;
+    font-weight: 400;
+    border-radius: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    height: 70px;
+    font-weight: 400;
+  
+    &:hover {
+      background-color: #9747ff;
+    }
+  }
+  
+  .additional-skills {
+    display: flex;
+    gap: 62px;
     justify-content: start;
     align-items: center;
     width: 400px;
-}
-
-.learning-img{
+  }
+  
+  .learning-img {
     height: 60px;
     width: auto;
-}
+  }
+  
