added contact section

--- a/src/app/mainsite/comments/comments.component.html
+++ b/src/app/mainsite/comments/comments.component.html
@@ -10,6 +10,7 @@
           <div class="comment-author">
             <div class="comment-divider"></div>
             <p>{{ comments[currentCommentIndex].name }}</p>
+            <div class="comment-divider"></div>
           </div>
   
         </div>
@@ -18,7 +19,6 @@
             <div class="avatar-initials">
               {{ getInitials(comments[currentCommentIndex].name) }}
             </div>
-            <div class="avatar-border"></div>
           </div>
       </div>
   
