--- a/src/app/mainsite/header/header.component.html
+++ b/src/app/mainsite/header/header.component.html
@@ -8,6 +8,10 @@
         <p>s</p></a
       >
     </div>
+    <div class="language-switcher">
+      <button class="lang-btn" >English</button>
+      <button class="lang-btn">Deutsch</button>
+    </div>
     <div class="navbar">
       <a href="#about">About me</a>
       <a href="#skills">Skills</a>
