--- a/src/app/mainsite/comments/comments.component.scss
+++ b/src/app/mainsite/comments/comments.component.scss
@@ -17,22 +17,19 @@
   gap: 44px;
   padding: 48px 96px;
   border: 4px solid #9747ff;
-  border-radius: 32px;
+  border-radius: 24px;
   margin-left: 0px;
   margin-top: 20px;
   position: relative;
   height: 250px;
   width: 1200px;
-  background: linear-gradient(
-    145deg,
-    #1c1f2e,
-    #2b2d3d
-  ); // Farbverlauf für den Hintergrund
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); // Sanfter Schatten für Tiefe
+  background: linear-gradient(145deg, #2b2d3d, #1c1f2e);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 
   &:hover {
-    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.15); // Verändere den Schatten bei Hover
-    transition: box-shadow 0.3s ease; // Sanfter Übergang
+    box-shadow: 0 12px 25px rgba(0, 0, 0, 0.4); // Erhöhter Schatten bei Hover
+    border-color: #70e61c; // Farbwechsel des Rahmens
+    background: linear-gradient(145deg, #2b2d3d, #2b2d3d);
   }
 }
 
@@ -67,8 +64,11 @@
 }
 
 .comment-divider {
-  border: 1px solid #70e61c;
-  width: 100px;
+  background: linear-gradient(90deg, #70e61c, #9747ff);
+  width: 50px;
+  margin: 10px 0;
+  border-radius: 10px; 
+  height: 3px;
 }
 
 .avatar-container {
@@ -90,13 +90,6 @@
   font-weight: bold;
   padding: 10px;
   position: relative;
-}
-
-.avatar-border {
-  border: 2px solid #70e61c;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  width: 130px;
 }
 
 .dot {
