--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(20, 28, 46);
+    background-color: #141D2F;
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
