scss changes contact

--- a/src/app/mainsite/contact/contact.component.html
+++ b/src/app/mainsite/contact/contact.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="contact-details-text">
           <p>
-            Contact me via this form! I’m eager to learn about your ideas and
+            Contact me via this form! I’m eager to learn about your ideas<br />and
             contribute my skills to help bring your projects to life.
             <br />
             <br />
