--- a/src/app/mainsite/contact/contact.component.scss
+++ b/src/app/mainsite/contact/contact.component.scss
@@ -17,7 +17,6 @@
   align-items: center;
   gap: 20px;
   position: relative;
-  z-index: 10;
 
   > h1 {
     font-size: 90px;
@@ -48,6 +47,8 @@
 .contact-details {
   display: flex;
   flex-direction: column;
+  left: 100px;
+  position: relative;
 }
 
 .contact-details-header {
@@ -61,8 +62,7 @@
   margin-top: 24px;
   font-size: 16px;
   font-weight: 300;
-  margin-left: 100px;
-  width: fit-content;
+  width: 100%;
 }
 
 .contact-form {
@@ -74,7 +74,6 @@
   max-width: 650px;
   padding: 20px;
   margin-right: 80px;
-  z-index: 100;
 
   > button {
     margin-top: 24px;
@@ -84,6 +83,7 @@
     font-size: 23px;
     border: none;
     cursor: pointer;
+    color: white;
   }
 
   > .form-error-message {
@@ -110,6 +110,7 @@
   border: 1px solid #9747ff;
   border-radius: 10px;
   outline: none;
+  font-family: "Poppins", sans-serif;
 
   &:hover {
     border: 1px solid #70e61c;
@@ -128,6 +129,7 @@
 .form-textarea {
   height: 150px;
   resize: none;
+  font-family: "Poppins", sans-serif;
 }
 
 .input-valid-border {
@@ -189,6 +191,6 @@
 .contact-shadow {
   position: absolute;
   left: 200px;
-  top: 550px;
+  top: 600px;
   z-index: 0;
 }
