--- a/src/app/mainsite/contact/contact.component.scss
+++ b/src/app/mainsite/contact/contact.component.scss
@@ -8,7 +8,9 @@
 }
 
 .contact-wrapper {
-  width: 1440px;
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .contact-header {
@@ -39,7 +41,7 @@
 
   > h2 {
     font-size: 32px;
-    font-weight: 500;
+    font-weight: 700;
     text-align: left;
   }
 }
@@ -61,7 +63,7 @@
 .contact-details-text {
   margin-top: 24px;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
   width: 100%;
 }
 
@@ -74,12 +76,13 @@
   max-width: 650px;
   padding: 20px;
   margin-right: 80px;
+  
 
   > button {
     margin-top: 24px;
     padding: 15px 30px;
     border-radius: 10px;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 23px;
     border: none;
     cursor: pointer;
@@ -144,8 +147,10 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  font-weight: 400;
   font-size: 14px;
   color: #fff;
+  align-self: flex-start;
 
   > img {
     display: block;
@@ -190,7 +195,7 @@
 }
 .contact-shadow {
   position: absolute;
-  left: 200px;
+  left: 0px;
   top: 600px;
   z-index: 0;
 }
