--- a/src/app/mainsite/comments/comments.component.html
+++ b/src/app/mainsite/comments/comments.component.html
@@ -5,7 +5,7 @@
         <div class="comment-content">
   
           <div class="comment-text">
-            <p>{{ comments[currentCommentIndex].message }}</p>
+            <p>{{ comments[currentCommentIndex].message | translate }}</p>
           </div>
           <div class="comment-author">
             <div class="comment-divider"></div>
