--- a/src/app/mainsite/skills/skills.component.html
+++ b/src/app/mainsite/skills/skills.component.html
@@ -76,22 +76,10 @@
         <h2>Skills</h2>
         <div class="skills-bar"></div>
       </div>
-      <p>
-        I have gained valuable experience in building projects using various
-        front-end technologies and concepts. From crafting responsive user
-        interfaces to optimizing performance, I am constantly improving my
-        abilities to stay at the forefront of the industry. My journey does not
-        stop there — I am always looking for new ways to expand my knowledge and
-        take on new challenges. Recently, I have started exploring ethical
-        hacking to better understand web security and to enhance the robustness
-        of the applications I build. Continuous learning is key to my approach,
-        and I am excited about where it will take me next.
-      </p>
+      <p>{{ "ABOUT.SKILLS" | translate }}</p>
       <div class="contact-cta">
-        <p>
-          Please feel free to contact me. I am always eager to continue expanding my knowledge and am passionate about learning new technologies and concepts.
-        </p>
-        <button class="get-in-touch">Get in touch</button>
+        <p>{{ "ABOUT.CONTACT_MESSAGE" | translate }}</p>
+        <button class="get-in-touch">{{ "BUTTON.GET_IN_TOUCH" | translate }}</button>
       </div>
     </div>
   </div>
