--- a/src/app/mainsite/above-the-fold/above-the-fold.component.scss
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.scss
@@ -1,6 +1,6 @@
 .hero-section {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
   display: flex;
@@ -9,17 +9,26 @@
   background-color: #141d2f;
 }
 
+.hero-content-wrapper {
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
 .background-image-photo {
   position: absolute;
-  left: 0;
+  left: -10%;
   top: 50%;
-  transform: translateY(-50%);
-  z-index: 1;
+  transform: translateY(-40%);
+  z-index: 0;
 }
 
 .center-image {
   position: relative;
-  z-index: 1;
+  z-index: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,7 +36,7 @@
 }
 
 .center-image img {
-  max-width: 600px;
+  max-width: 500px;
   height: auto;
 }
 
@@ -35,11 +44,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .introduction-text {
   font-size: 90px;
   font-weight: 400;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -53,14 +64,14 @@
 
 .name-title {
   > h1 {
-    font-size: 128px;
+    font-size: 98px;
     font-weight: 700;
     text-align: left;
     height: 163px;
     overflow-y: hidden;
     z-index: 10;
     position: relative;
-    margin-bottom: 0px;
+    margin: 0;
   }
 
   > h2 {
@@ -70,7 +81,7 @@
     text-align: left;
     height: 116px;
     position: relative;
-    margin-top: 0;
+    margin: 0;
   }
 }
 
@@ -104,7 +115,6 @@
 .hero-content {
   height: auto;
   display: flex;
-  //width: 1440px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -119,29 +129,17 @@
   border-bottom-right-radius: 4px;
 }
 
-/*.social-scroll-wrapper {
-  position: relative;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("/assets/img/background_abovethefold.svg");
-  background-size: cover;
-  background-position: center;
-}*/
-
 .social-scroll-wrapper {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: auto;
-  /*background-image: url("/assets/img/background_abovethefold.svg");
-    background-size: cover;
-    background-position: center;*/
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   padding: 10px;
+  z-index: 2;
 }
 
 .social-bar {
@@ -150,7 +148,6 @@
   gap: 42px;
   display: flex;
   height: 50px;
-  z-index: 2;
 
   > a {
     > img {
@@ -186,9 +183,9 @@
 
 .hero-bg {
   position: absolute;
-  top: 430px;
-  z-index: 2;
-  width: 100%;
-  height: 100%;
+  top: 40px;
+  z-index: 1;
+  width: 1440px;
+  height: 1080px;
   object-fit:  cover;
 }
