--- a/src/app/mainsite/contact/contact.component.html
+++ b/src/app/mainsite/contact/contact.component.html
@@ -2,21 +2,20 @@
   <div class="contact-wrapper">
     <div class="contact-header">
       <div class="contact-header-line"></div>
-      <h1>Contact</h1>
+      <h1>{{ 'CONTACT.TITLE' | translate }}</h1>
     </div>
     <div class="contact-info">
       <div class="contact-details">
         <div class="contact-details-header">
-          <h2>Got a frontend challenge?<br />Let's build a solution!</h2>
+          <h2 [innerHTML]="getHtml('CONTACT.HEADER')"></h2>
         </div>
         <div class="contact-details-text">
           <p>
-            Contact me via this form! I am eager to learn about your ideas<br />and
-            contribute my skills to help bring your projects to life.
+            <span [innerHTML]="getHtml('CONTACT.DESCRIPTION')"></span>
             <br />
             <br />
-            Need a frontend developer?
-            <b>Contact me.</b>
+            <span [innerHTML]="getHtml('CONTACT.NEED_DEV')"></span>
+            <b [innerHTML]="getHtml('CONTACT.CONTACT_ME')"></b>
           </p>
         </div>
       </div>
@@ -40,7 +39,7 @@
             'input-error-border': !name.valid && name.touched,
             'input-success-border': name.valid && name.touched
           }"
-          placeholder="Your name"
+          placeholder="{{ 'CONTACT.NAME_PLACEHOLDER' | translate }}"
           class="form-input"
         />
         <span *ngIf="!name.valid && name.touched" class="form-error-message">
@@ -60,7 +59,7 @@
             'input-error-border': !email.valid && email.touched,
             'input-success-border': email.valid && email.touched
           }"
-          placeholder="Your email"
+          placeholder="{{ 'CONTACT.EMAIL_PLACEHOLDER' | translate }}"
           class="form-input"
         />
         <span *ngIf="!email.valid && email.touched" class="form-error-message">
@@ -79,7 +78,7 @@
             'input-error-border': !message.valid && message.touched,
             'input-success-border': message.valid && message.touched
           }"
-          placeholder="Your message"
+          placeholder="{{ 'CONTACT.MESSAGE_PLACEHOLDER' | translate }}"
           class="form-input form-textarea"
           style="height: 200px"
         ></textarea>
@@ -96,9 +95,7 @@
             [src]="checkboxImage"
             alt="Checkbox Icon"
           />
-          <span>
-            I have read the <a href="privacyPolicy">Privacy Policy</a> and agree to it.
-          </span>
+          <span [innerHTML]="getHtml('CONTACT.PRIVACY_POLICY')" class="privacy-link"></span>
         </div>
 
         <button
@@ -112,7 +109,7 @@
             'background-color': checkboxImage === './assets/img/check_button_checked.svg' ? '#70E61C' : '#B6B6B6'
           }"
         >
-          Submit message
+        {{ 'CONTACT.SUBMIT' | translate }}
         </button>
       </form>
 
