--- a/src/app/mainsite/contact/contact.component.scss
+++ b/src/app/mainsite/contact/contact.component.scss
@@ -76,7 +76,6 @@
   max-width: 650px;
   padding: 20px;
   margin-right: 80px;
-  
 
   > button {
     margin-top: 24px;
@@ -165,15 +164,15 @@
       border-radius: 50%;
     }
   }
+}
 
-  a {
-    color: #9747ff;
-    text-decoration: none;
+.privacy-link a {
+  color: #9747ff !important;
+  text-decoration: none !important;
+}
 
-    &:hover {
-      text-decoration: underline;
-    }
-  }
+.privacy-link a:hover {
+  text-decoration: underline !important;
 }
 
 .arrow-up {
