--- a/src/app/mainsite/header/header.component.html
+++ b/src/app/mainsite/header/header.component.html
@@ -9,13 +9,13 @@
       >
     </div>
     <div class="language-switcher">
-      <button class="lang-btn" >English</button>
-      <button class="lang-btn">Deutsch</button>
+      <button class="lang-btn" [ngClass]="{ active: activeLang === 'en' }" (click)="switchLanguage('en')">English</button>
+      <button class="lang-btn" [ngClass]="{ active: activeLang === 'de' }" (click)="switchLanguage('de')">Deutsch</button>
     </div>
     <div class="navbar">
-      <a href="#about">About me</a>
-      <a href="#skills">Skills</a>
-      <a href="#portfolio">Portfolio</a>
+      <a href="#about">{{ "NAV.ABOUT" | translate }}</a>
+      <a href="#skills">{{ "NAV.SKILLS" | translate }}</a>
+      <a href="#portfolio">{{ "NAV.PORTFOLIO" | translate }}</a>
     </div>
   </header>
 </section>
