--- a/src/app/mainsite/portfolio/portfolio.component.html
+++ b/src/app/mainsite/portfolio/portfolio.component.html
@@ -1,1 +1,72 @@
-<p>portfolio works!</p>
+<section class="portfolio">
+  <div class="portfolio-content">
+    <div class="portfolio-header">
+      <div class="portfolio-bar"></div>
+      <h1>Portfolio</h1>
+      <div class="portfolio-bar"></div>
+    </div>
+    <p class="portfolio-text">{{ "PORTFOLIO.HEADER" | translate }}</p>
+
+    <div class="projects">
+      <div class="project-card">
+        <img src="./assets/img/join.png" alt="Project Image" class="project-img" />
+        <div class="project-info">
+          <h2 class="project-title">Join</h2>
+          <p class="project-tech">Angular | TypeScript | HTML | CSS | Firebase</p>
+          <p class="project-description">
+            Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.
+          </p>
+          <div class="buttons">
+            <button class="live-btn">Live test</button>
+            <a href="https://github.com/FuchsMiriam/join-dummy"><button class="github-btn">Github</button></a>
+          </div>
+        </div>
+      </div>
+
+       <div class="project-card">
+        <div class="project-info">
+          <h2 class="project-title">El Pollo Loco</h2>
+          <p class="project-tech">JavaScript | HTML | CSS</p>
+          <p class="project-description">
+            A Jump ’n’ Run game based on an object-oriented approach. Help Pepe to find coins and salsa bottle to fight against the chickens.
+          </p>
+          <div class="buttons">
+            <button class="live-btn">Live test</button>
+            <a href="https://github.com/FuchsMiriam/polloloco"><button class="github-btn">Github</button></a>
+          </div>
+        </div>
+        <img src="./assets/img/pollo-loco.png" alt="Project Image" class="project-img" />
+      </div>
+
+    <div class="project-card">
+        <img src="./assets/img/simple-crm.png" alt="Project Image" class="project-img" />
+        <div class="project-info">
+          <h2 class="project-title">Simple CRM</h2>
+          <p class="project-tech">Angular | Firebase</p>
+          <p class="project-description">
+            A very Simple Customer Relationship Management system working with CRUD functionality.
+          </p>
+          <div class="buttons">
+            <button class="live-btn">Live test</button>
+            <button class="github-btn">Github</button>
+          </div>
+        </div>
+      </div>
+
+     <div class="project-card">
+        <div class="project-info">
+          <h2 class="project-title">Pokédex</h2>
+          <p class="project-tech">JavaScript | HTML | CSS | API</p>
+          <p class="project-description">
+            Based on the PokéAPI, a simple library that provides and catalogs Pokémon information.
+          </p>
+          <div class="buttons">
+            <button class="live-btn">Live test</button>
+            <a href="https://github.com/FuchsMiriam/pokedex"><button class="github-btn">Github</button></a>
+          </div>
+        </div>
+        <img src="./assets/img/pokedex.png" alt="Project Image" class="project-img" />
+      </div>
+    </div>
+  </div>
+</section>
