--- a/src/app/mainsite/portfolio/portfolio.component.html
+++ b/src/app/mainsite/portfolio/portfolio.component.html
@@ -1,11 +1,14 @@
 <section class="portfolio">
   <div class="portfolio-content">
     <div class="portfolio-header">
-      <div class="portfolio-bar"></div>
+      <div class="portfolio-bar left"></div>
       <h1>Portfolio</h1>
-      <div class="portfolio-bar"></div>
+      <div class="portfolio-bar right"></div>
     </div>
-    <p class="portfolio-text">{{ "PORTFOLIO.HEADER" | translate }}</p>
+    <div class="portfolio-text">
+      {{ "PORTFOLIO.HEADER" | translate }}
+    </div>
+   
 
     <div class="projects">
       <div class="project-card">
@@ -39,7 +42,7 @@
       </div>
 
     <div class="project-card">
-        <img src="./assets/img/simple-crm.png" alt="Project Image" class="project-img" />
+        <img src="./assets/img/simple-crm.jpg" alt="Project Image" class="project-img" />
         <div class="project-info">
           <h2 class="project-title">Simple CRM</h2>
           <p class="project-tech">Angular | Firebase</p>
