--- a/src/app/mainsite/portfolio/portfolio.component.scss
+++ b/src/app/mainsite/portfolio/portfolio.component.scss
@@ -4,15 +4,11 @@
   display: flex;
   justify-content: center;
   position: relative;
+  align-items: center;
 }
 
 .portfolio-content {
   width: 1440px;
-  > p {
-    margin-left: 100px;
-    font-size: 16px;
-    font-weight: 300;
-  }
 }
 
 .portfolio-bar {
@@ -20,13 +16,25 @@
   border: 2px solid #9747ff;
 }
 
+.portfolio-bar.left {
+  width: 145px;
+  flex-shrink: 0;
+}
+
+.portfolio-bar.right {
+  flex-grow: 1;
+  max-width: 484px;
+}
+
 .portfolio-header {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   flex-direction: row;
-  gap: 32px;
+  gap: 10px;
   margin-top: 40px;
+  flex-wrap: wrap;
+  position: relative;
 
   > h1 {
     font-size: 90px;
@@ -46,7 +54,10 @@
 .portfolio-text {
   font-size: 16px;
   font-weight: 400;
-  margin-bottom: 40px;
+  margin-bottom: 150px;
+  text-align: right;
+  display: flex;
+  justify-content: center;
 }
 
 .project-card {
@@ -60,15 +71,15 @@
 }
 
 .project-card:nth-child(odd) {
-  flex-direction: row;  // Für jede ungerade Karte Bild links, Text rechts
+  flex-direction: row;
 }
 
 .project-card:nth-child(even) {
-  flex-direction: row;  // Für jede gerade Karte Text links, Bild rechts
+  flex-direction: row;
 }
 
 .project-img {
-  width: 50%;
+  //width: 50%;
   height: 100%;
   object-fit: cover;
 }
@@ -98,7 +109,7 @@
 .project-title {
   font-weight: 700;
   font-size: 32px;
-  color:#9747ff;
+  color: #9747ff;
   margin: 0;
 }
 
@@ -135,7 +146,7 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
   font-size: 23px;
-  white-space: nowrap; 
+  white-space: nowrap;
   font-weight: 400;
 }
 
