--- a/src/app/mainsite/portfolio/portfolio.component.scss
+++ b/src/app/mainsite/portfolio/portfolio.component.scss
@@ -5,6 +5,11 @@
   justify-content: center;
   position: relative;
   align-items: center;
+  background-image: url(/assets/img/shadow-portfolio.svg), url(/assets/img/green-shadow-portfolio.svg);
+  background-repeat: no-repeat, no-repeat;
+  background-position: bottom left, center right;
+  background-size: auto;
+  z-index: 0;
 }
 
 .portfolio-content {
