media queries about me and skills

--- a/src/app/mainsite/above-the-fold/above-the-fold.component.html
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.html
@@ -1,18 +1,19 @@
 <section class="hero-section">
   <div class="hero-content-wrapper">
-  <img
-  class="hero-bg"
-  src="./assets/img/background_abovethefold.svg"
-  alt=""
-/>
     <img
-      class="background-image-photo"
-      src="./assets/img/photo_shadows.svg"
-      alt="Background photo"
+      class="hero-bg"
+      src="./assets/img/background_abovethefold.svg"
+      alt=""
     />
-    <div class="center-image">
-      <img src="./assets/img/miriam_fuchs.png" alt="Miriam Fuchs" />
-    </div>
+      <img
+        class="background-image-photo"
+        src="./assets/img/photo_shadows.svg"
+        alt="Background photo"
+      />
+      <div class="center-image">
+        <img src="./assets/img/miriam_fuchs.png" alt="Miriam Fuchs" />
+      </div>
+ 
     <div class="hero-content">
       <div class="introduction-container">
         <div class="introduction-text">
@@ -23,12 +24,14 @@
           <h2>FRONTEND DEVELOPER</h2>
         </div>
       </div>
-  
+
       <div class="contact-button-container">
-        <button class="contact-button">{{ "BUTTON.LETS_TALK" | translate }}</button>
+        <button class="contact-button">
+          {{ "BUTTON.LETS_TALK" | translate }}
+        </button>
       </div>
     </div>
-  
+
     <div class="social-scroll-wrapper">
       <div class="social-bar">
         <div class="social-bar-line"></div>
@@ -42,7 +45,7 @@
           <img src="./assets/img/linkedin.svg" alt="LinkedIn" />
         </a>
       </div>
-  
+
       <div class="scroll-indicator">
         <p>{{ "SCROLL.DOWN" | translate }}</p>
         <img
@@ -55,5 +58,4 @@
       </div>
     </div>
   </div>
-  </section>
-  
+</section>
