--- a/src/app/mainsite/aboutme/aboutme.component.scss
+++ b/src/app/mainsite/aboutme/aboutme.component.scss
@@ -98,3 +98,37 @@ p {
   transform: translateY(-50%);
   flex-shrink: 0;
 }
+
+@media (max-width: 1550px) {
+  .image-section {
+    display: none;
+  }
+}
+
+@media (max-width: 700px) {
+  .about-me {
+    justify-content: flex-start;
+    padding: 0 20px;
+  }
+
+  .about-me-container{
+    padding: 0 20px;
+  }
+  
+  .about-me-content {
+    align-items: flex-start;
+    margin-top: 0;
+    > h1 {
+      font-size: 40px;
+    }
+    > p {
+      font-size: 14px;
+    }
+  }
+
+  .info-section {
+    > p {
+      font-size: 14px;
+    }
+  }
+}
