--- a/src/app/mainsite/above-the-fold/above-the-fold.component.scss
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.scss
@@ -43,13 +43,12 @@
 
 .introduction-container {
   display: flex;
-  justify-content: center;
+  /*justify-content: center;
   align-items: center;
-  text-align: center;
+  text-align: center;*/
 }
 
 .introduction-text {
-  font-size: 90px;
   font-weight: 400;
   margin: 0;
   display: flex;
@@ -64,11 +63,14 @@
 }
 
 .name-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   > h1 {
     font-size: 98px;
     font-weight: 700;
     text-align: left;
-    height: 163px;
     overflow-y: hidden;
     z-index: 10;
     position: relative;
@@ -80,7 +82,6 @@
     font-size: 64px;
     font-weight: 400;
     text-align: left;
-    height: 116px;
     position: relative;
     margin: 0;
   }
@@ -188,5 +189,109 @@
   z-index: 1;
   width: 1440px;
   height: 1080px;
-  object-fit:  cover;
+  object-fit: cover;
+}
+
+@media (max-width: 1400px) {
+  .background-image-photo {
+    top: 40%;
+    left: 0;
+  }
+
+  .hero-bg {
+    top: 100px;
+  }
+
+  .hero-section {
+    height: calc(100vh + 200px);
+  }
+
+  .hero-content-wrapper {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 980px) {
+  .name-title {
+    > h1 {
+      font-size: 80px;
+    }
+    > h2 {
+      font-size: 40px;
+    }
+  }
+
+  .introduction-text {
+    font-size: 54px;
+  }
+}
+
+@media (max-width: 980px) {
+  .name-title {
+    > h1 {
+      font-size: 45px;
+      font-weight: 700;
+      line-height: 54px;
+      text-align: left;
+    }
+    > h2 {
+      font-size: 29px;
+      font-weight: 400;
+      line-height: 34.8px;
+      text-align: left;
+    }
+  }
+
+  .introduction-text {
+    > p {
+      font-size: 32px;
+      font-weight: 400;
+      line-height: 38.4px;
+      text-align: left;
+    }
+  }
+}
+
+@media (max-width: 625px) {
+  .scroll-indicator {
+    display: none;
+  }
+}
+
+@media (max-width: 470px) {
+  .center-image {
+    margin-bottom: 20px;
+    > img {
+      max-width: 300px;
+    }
+  }
+
+  .hero-bg {
+    top: -80px;
+  }
+}
+
+@media (max-width: 415px) {
+  .introduction-container {
+    flex-direction: column;
+  }
+  .introduction-text {
+    transform: none;
+    height: 60px;
+  }
+
+  .name-title {
+    margin-bottom: 40px;
+
+    > h1 {
+      font-size: 30px;
+    }
+    > h2 {
+      font-size: 20px;
+    }
+  }
+
+  .social-bar {
+    gap: 15px;
+  }
 }
