--- a/src/app/mainsite/skills/skills.component.scss
+++ b/src/app/mainsite/skills/skills.component.scss
@@ -1,123 +1,190 @@
 .skills {
-    background: #141d2f;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .skills-wrapper {
-    margin-top: 100px;
-    width: 1440px;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .skills-icons-container {
-    padding: 40px 80px;
-    position: relative;
-    z-index: 1;
-  }
-  
-  .skills-icons-grid {
-    width: 721px;
-    display: flex;
-    flex-direction: row;
-    gap: 62px;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .skill-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    text-align: center;
-    height: 100px;
-    width: 88px;
-    flex: 1 1 15%;
-  
-    > img {
-      &:hover {
-        position: relative;
-        top: -10px;
-      }
+  background: #141d2f;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.skills-wrapper {
+  margin-top: 100px;
+  width: 1440px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.skills-icons-container {
+  padding: 40px 80px;
+  position: relative;
+  z-index: 1;
+}
+
+.skills-icons-grid {
+  width: 721px;
+  display: flex;
+  flex-direction: row;
+  gap: 62px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.skill-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  text-align: center;
+  height: 100px;
+  width: 88px;
+  flex: 1 1 15%;
+
+  > img {
+    &:hover {
+      position: relative;
+      top: -10px;
     }
   }
-  
-  .skills-details {
-    z-index: 1;
-    width: 562px;
+}
+
+.skills-details {
+  z-index: 1;
+  width: 562px;
+}
+
+.skills-details h2 {
+  font-size: 90px;
+  font-weight: 700;
+}
+
+.skills-bar {
+  width: 287px;
+  border: 2px solid #9747ff;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.skills-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 32px;
+}
+
+.skills-details p {
+  font-size: 16px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.contact-cta {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.get-in-touch {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background: #70e61c;
+  color: white;
+  border: none;
+  font-weight: 400;
+  border-radius: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  height: 70px;
+  font-weight: 400;
+
+  &:hover {
+    background-color: #9747ff;
   }
-  
-  .skills-details h2 {
-    font-size: 90px;
-    font-weight: 700;
+}
+
+.additional-skills {
+  display: flex;
+  gap: 62px;
+  justify-content: start;
+  align-items: center;
+  width: 400px;
+}
+
+.learning-img {
+  height: 60px;
+  width: auto;
+}
+
+@media (max-width: 1470px) {
+  .skills-wrapper {
+    align-items: center;
+    flex-direction: column-reverse;
   }
-  
-  .skills-bar {
-    width: 287px;
-    border: 2px solid #9747ff;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-  }
-  
+
   .skills-header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 32px;
-  }
-  
-  .skills-details p {
-    font-size: 16px;
-    font-weight: 400;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    height: 200px;
   }
 
   .contact-cta {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-top: 20px;
+    margin-bottom: 50px;
   }
-  
-  
-  .get-in-touch {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background: #70e61c;
-    color: white;
-    border: none;
-    font-weight: 400;
-    border-radius: 10px;
-    font-size: 20px;
-    cursor: pointer;
-    height: 70px;
-    font-weight: 400;
-  
-    &:hover {
-      background-color: #9747ff;
+}
+
+@media (max-width: 765px) {
+  .skills-header {
+    height: 100px;
+    > h2 {
+      font-size: 40px;
     }
   }
-  
-  .additional-skills {
-    display: flex;
-    gap: 62px;
-    justify-content: start;
-    align-items: center;
+
+  .skills-details {
     width: 400px;
   }
-  
-  .learning-img {
-    height: 60px;
-    width: auto;
+
+  .skills-details p {
+    text-align: left;
+    font-size: 14px;
   }
-  
+  .skills-icons-grid {
+    width: 400px;
+  }
+
+  .skill-item {
+    > img {
+      height: 45px;
+      width: auto;
+    }
+  }
+}
+
+@media (max-width: 460px) {
+  .skills-details {
+    width: 250px;
+  }
+
+  .skill-item {
+    > img {
+      height: 25px;
+      width: auto;
+    }
+    > p {
+      font-size: 14px;
+    }
+  }
+
+  .skills-icons-grid {
+    gap: 20px;
+    width: 250px;
+  }
+
+  .additional-skills {
+    gap: 20px;
+    width: 250px;
+  }
+}
