media query comments

--- a/src/app/mainsite/aboutme/aboutme.component.html
+++ b/src/app/mainsite/aboutme/aboutme.component.html
@@ -1,4 +1,4 @@
-<section class="about-me-container">
+<section class="about-me-container" id="aboutme">
   <div class="about-me">
     <div class="about-me-content">
       <h1>{{ "ABOUT.TITLE" | translate }}</h1>
