--- a/src/app/mainsite/above-the-fold/above-the-fold.component.html
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.html
@@ -11,7 +11,7 @@
         alt="Background photo"
       />
       <div class="center-image">
-        <img src="./assets/img/miriam_fuchs.png" alt="Miriam Fuchs" />
+        <img src="./assets/img/miriam_fuchs_downsized.png" alt="Miriam Fuchs" />
       </div>
  
     <div class="hero-content">
@@ -54,6 +54,7 @@
           (mouseleave)="changeArrowImage(false)"
           src="./assets/img/arrow_up.svg"
           alt="Scroll down arrow"
+          (click)="scrollToAboutMe()"
         />
       </div>
     </div>
