--- a/src/app/mainsite/skills/skills.component.html
+++ b/src/app/mainsite/skills/skills.component.html
@@ -62,7 +62,7 @@
             (mouseleave)="hover = false"
             class="skill-item"
           >
-            <img class="learning-img" src="./assets/img/learning.png" alt="" />
+            <img class="learning-img" src="./assets/img/learning_downsized.png" alt="" />
             <p>
               Further <br />
               Education
