--- a/src/app/mainsite/aboutme/aboutme.component.scss
+++ b/src/app/mainsite/aboutme/aboutme.component.scss
@@ -105,6 +105,14 @@ p {
   }
 }
 
+@media (max-width: 1200px) {
+  .about-me-content{
+    > h1 {
+      font-size: 70px;
+    }
+  }
+}
+
 @media (max-width: 700px) {
   .about-me {
     justify-content: flex-start;
