--- a/src/app/mainsite/contact/contact.component.scss
+++ b/src/app/mainsite/contact/contact.component.scss
@@ -5,6 +5,7 @@
   overflow-y: hidden;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 
 .contact-wrapper {
@@ -38,6 +39,9 @@
   display: flex;
   justify-content: space-between;
   flex-direction: row;
+  margin-left: auto;
+  margin-right: auto;
+  gap: 80px;
 
   > h2 {
     font-size: 32px;
@@ -64,7 +68,7 @@
   margin-top: 24px;
   font-size: 16px;
   font-weight: 400;
-  width: 100%;
+  width: 90%;
 }
 
 .contact-form {
@@ -195,6 +199,83 @@
 .contact-shadow {
   position: absolute;
   left: 0px;
-  top: 600px;
+  top: 650px;
   z-index: 0;
+}
+
+@media (max-width: 1250px) {
+  .contact-header {
+    margin-top: 0;
+    height: 100px;
+    > h1 {
+      font-size: 70px;
+    }
+  }
+
+  .contact-details {
+    left: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 90%;
+  }
+
+  .contact-form {
+    width: 50%;
+  }
+}
+
+@media (max-width: 1165px) {
+  .contact-header-line {
+    width: 200px;
+  }
+
+  .contact-info {
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
+  }
+
+  .contact-details-text {
+    margin-top: 0;
+  }
+
+  .contact-shadow{
+    top: 950px;
+  }
+}
+
+@media (max-width: 765px) {
+  .contact-header {
+    justify-content: center;
+    > h1 {
+      font-size: 40px;
+    }
+  }
+
+  .contact-shadow{
+    top: 1000px;
+  }
+}
+
+@media (max-width: 450px) {
+  .contact-header-line {
+    width: 50px;
+  }
+
+  .contact-form{
+    >button{
+    padding: 10px 25px;
+    border-radius: 10px;
+    font-size: 16px;
+    margin-top: 10px;
+    }
+  }
+
+  .privacy-policy-section{
+    gap: 5px;
+  }
+
+  .contact-shadow{
+    top: 1050px;
+  }
 }
