privacy policy added

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,13 +12,13 @@
           <p>© Miriam Fuchs 2024</p>
         </div>
         <div class="logo-right">
-          <a href="https://github.com/FuchsMiriam">
+          <a href="https://github.com/FuchsMiriam" target="_blank">
             <img src="./assets/img/github.svg" alt="Github">
           </a>
           <a href="#contact">
             <img src="./assets/img/email.svg" alt="Kontakt">
           </a>
-          <a href="https://www.linkedin.com/in/miriamfuchs/">
+          <a href="https://www.linkedin.com/in/miriamfuchs/" target="_blank">
             <img src="./assets/img/linkedin.svg" alt="LinkedIn">
           </a>
         </div>
