--- a/src/app/mainsite/above-the-fold/above-the-fold.component.html
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.html
@@ -26,22 +26,22 @@
       </div>
 
       <div class="contact-button-container">
-        <button class="contact-button">
+        <a href="#contact" class="contact-button">
           {{ "BUTTON.LETS_TALK" | translate }}
-        </button>
+        </a>
       </div>
     </div>
 
     <div class="social-scroll-wrapper">
       <div class="social-bar">
         <div class="social-bar-line"></div>
-        <a href="https://github.com/FuchsMiriam">
+        <a href="https://github.com/FuchsMiriam" target="_blank">
           <img src="./assets/img/github.svg" alt="GitHub" />
         </a>
         <a href="#contact">
           <img src="./assets/img/email.svg" alt="Email" />
         </a>
-        <a href="https://www.linkedin.com/in/miriamfuchs/">
+        <a href="https://www.linkedin.com/in/miriamfuchs/" target="_blank">
           <img src="./assets/img/linkedin.svg" alt="LinkedIn" />
         </a>
       </div>
