--- a/src/app/mainsite/portfolio/portfolio.component.html
+++ b/src/app/mainsite/portfolio/portfolio.component.html
@@ -21,7 +21,7 @@
           </p>
           <div class="buttons">
             <button class="live-btn">Live test</button>
-            <a href="https://github.com/FuchsMiriam/join-dummy"><button class="github-btn">Github</button></a>
+            <a href="https://github.com/FuchsMiriam/join-dummy" target="_blank"><button class="github-btn">Github</button></a>
           </div>
         </div>
       </div>
@@ -35,7 +35,7 @@
           </p>
           <div class="buttons">
             <button class="live-btn">Live test</button>
-            <a href="https://github.com/FuchsMiriam/polloloco"><button class="github-btn">Github</button></a>
+            <a href="https://github.com/FuchsMiriam/polloloco" target="_blank"><button class="github-btn">Github</button></a>
           </div>
         </div>
         <img src="./assets/img/pollo-loco.png" alt="Project Image" class="project-img" />
@@ -65,7 +65,7 @@
           </p>
           <div class="buttons">
             <button class="live-btn">Live test</button>
-            <a href="https://github.com/FuchsMiriam/pokedex"><button class="github-btn">Github</button></a>
+            <a href="https://github.com/FuchsMiriam/pokedex" target="_blank"><button class="github-btn">Github</button></a>
           </div>
         </div>
         <img src="./assets/img/pokedex.png" alt="Project Image" class="project-img" />
