--- a/src/app/mainsite/skills/skills.component.html
+++ b/src/app/mainsite/skills/skills.component.html
@@ -80,7 +80,7 @@
       <p>{{ "ABOUT.SKILLS" | translate }}</p>
       <div class="contact-cta">
         <p>{{ "ABOUT.CONTACT_MESSAGE" | translate }}</p>
-        <button class="get-in-touch">{{ "BUTTON.GET_IN_TOUCH" | translate }}</button>
+        <a href="#contact" class="get-in-touch">{{ "BUTTON.GET_IN_TOUCH" | translate }}</a>
       </div>
     </div>
   </div>
