--- a/src/app/mainsite/skills/skills.component.scss
+++ b/src/app/mainsite/skills/skills.component.scss
@@ -91,19 +91,21 @@
 
 .get-in-touch {
   margin-top: 20px;
-  padding: 10px 20px;
+  padding: 15px 30px;
   background: #70e61c;
   color: white;
   border: none;
   font-weight: 400;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 23px;
   cursor: pointer;
-  height: 70px;
-  font-weight: 400;
+  text-decoration: none;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  width: 200px;
 
   &:hover {
     background-color: #9747ff;
+    transform: scale(1.1);
   }
 }
 
