finished media queries desktop

--- a/src/app/mainsite/above-the-fold/above-the-fold.component.html
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.html
@@ -5,6 +5,7 @@
       src="./assets/img/background_abovethefold.svg"
       alt=""
     />
+    <div class="image-wrapper">
       <img
         class="background-image-photo"
         src="./assets/img/photo_shadows.svg"
@@ -13,6 +14,7 @@
       <div class="center-image">
         <img src="./assets/img/miriam_fuchs_downsized.png" alt="Miriam Fuchs" />
       </div>
+    </div>
  
     <div class="hero-content">
       <div class="introduction-container">
