--- a/src/app/mainsite/aboutme/aboutme.component.scss
+++ b/src/app/mainsite/aboutme/aboutme.component.scss
@@ -125,7 +125,7 @@ p {
   
   .about-me-content {
     align-items: flex-start;
-    margin-top: 0;
+    margin-top: 100px;
     > h1 {
       font-size: 40px;
     }
