--- a/src/app/mainsite/aboutme/aboutme.component.scss
+++ b/src/app/mainsite/aboutme/aboutme.component.scss
@@ -105,6 +105,12 @@ p {
   }
 }
 
+@media (max-width: 1280px) and (max-height: 800px) {
+ .about-me-content{
+  z-index: 1;
+ }
+}
+
 @media (max-width: 1200px) {
   .about-me-content{
     > h1 {
