--- a/src/app/mainsite/above-the-fold/above-the-fold.component.scss
+++ b/src/app/mainsite/above-the-fold/above-the-fold.component.scss
@@ -251,6 +251,24 @@
   }
 }
 
+@media (max-width: 1280px) and (max-height: 800px) {
+  .hero-section {
+    overflow: visible;
+  }
+}
+
+@media (max-width: 1024px) and (max-height: 600px) {
+  .hero-section {
+    padding-top: 200px;
+    margin-bottom: 150px;
+  }
+  .name-title {
+    > h1 {
+      font-size: 80px;
+    }
+  }
+}
+
 @media (max-width: 980px) {
   .hero-section {
     padding-top: 0;
