--- a/src/app/mainsite/contact/contact.component.scss
+++ b/src/app/mainsite/contact/contact.component.scss
@@ -96,7 +96,7 @@
     font-size: 14px;
     color: red;
     font-weight: 200;
-    width: 600px;
+    width: 100%;
   }
 }
 
@@ -213,7 +213,6 @@
   }
 
   .contact-details {
-    left: 0px;
     margin-left: auto;
     margin-right: auto;
     max-width: 90%;
@@ -235,12 +234,28 @@
     gap: 0;
   }
 
+  .contact-details {
+    left: 0;
+  }
+
   .contact-details-text {
     margin-top: 0;
   }
 
-  .contact-shadow{
+  .contact-form {
+    > .form-error-message {
+      font-size: 12px;
+    }
+  }
+
+  .contact-shadow {
     top: 950px;
+  }
+}
+
+@media (max-width: 1024px) and (max-height: 600px) {
+  .contact-form{
+    margin-right: 0;
   }
 }
 
@@ -252,7 +267,7 @@
     }
   }
 
-  .contact-shadow{
+  .contact-shadow {
     top: 1000px;
   }
 }
@@ -262,20 +277,30 @@
     width: 50px;
   }
 
-  .contact-form{
-    >button{
-    padding: 10px 25px;
-    border-radius: 10px;
-    font-size: 16px;
-    margin-top: 10px;
+  .contact-details {
+    align-items: center;
+  }
+
+  .contact-form {
+    > button {
+      padding: 10px 25px;
+      border-radius: 10px;
+      font-size: 16px;
+      margin-top: 10px;
     }
   }
 
-  .privacy-policy-section{
+  .privacy-policy-section {
     gap: 5px;
   }
 
-  .contact-shadow{
+  .contact-shadow {
     top: 1050px;
+  }
+}
+
+@media (max-width: 365px) and (max-height: 667px) {
+  .contact-form{
+    margin-right: 0 !important;
   }
 }
