--- a/src/app/mainsite/header/header.component.scss
+++ b/src/app/mainsite/header/header.component.scss
@@ -149,6 +149,12 @@ a {
   }
 }
 
+@media (max-width: 1280px) and (max-height: 800px) {
+  .header{
+    padding: 15px 150px;
+  }
+}
+
 @media (max-width: 975px) {
   .header {
     padding: 37px 25px;
