--- a/src/app/mainsite/portfolio/portfolio.component.scss
+++ b/src/app/mainsite/portfolio/portfolio.component.scss
@@ -223,13 +223,19 @@
   }
 }
 
+@media (max-width: 1280px) and (max-height: 800px) {
+  .project-card{
+   margin-left: auto;
+  }
+ }
+
 @media (max-width: 1165px) {
   .portfolio {
     background-position: center left, bottom left;
     background-size: 600px, 800px;
   }
 
-  .portfolio-bar.right{
+  .portfolio-bar.right {
     max-width: 200px;
   }
 }
@@ -248,7 +254,7 @@
     }
   }
 
-  .portfolio-bar.right{
+  .portfolio-bar.right {
     max-width: 50px;
   }
 
@@ -280,5 +286,12 @@
   .github-btn,
   .live-btn {
     font-size: 18px;
+  }
+}
+
+@media (max-width: 365px) and (max-height: 667px) {
+
+  .project-img {
+    margin-right: 50px;
   }
 }
